--- a/style.css
+++ b/style.css
@@ -187,6 +187,8 @@
             background-image: url("images/team.png");
         }
 
+        }
+
         footer {
             background-color: #007acc;
             color: white;
@@ -284,4 +286,5 @@
 
 </body>
 </html>
+
 
